# WorkInitClient

./: .gitignore  CMakeLists.txt  build.sh  init.sh  work_init_client.sh
src/: main.cpp
src/Client/: Client.cpp  Credential.cpp
